Fix clipped text on mobile subvalues

--- a/src/components/SupplyView/SupplyView.module.scss
+++ b/src/components/SupplyView/SupplyView.module.scss
@@ -54,7 +54,6 @@
 .paramSubValue {
   font-size: 0.7rem;
   font-weight: 300;
-  line-height: 1;
   margin-top: -4px;
   @include clip-text;
   @media (min-width: 768px) {
